# Balance-sheet-playground

./: README.md  balance_sheet_task.md  example_scenario.yml  pyproject.toml  task.md
src/balance_sheet_playground/: __init__.py  cli.py  expressions.py  market.py  model.py  parser.py  render.py
tests/: test_balance_sheet_playground.py
